<resources>
    <string name="app_name">BoilerAssistant</string>
    <string name="app_tagline">Welcome to BoilerAssistant</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="nav_today">Today</string>
    <string name="nav_favorites">Calendar</string>
    <string name="nav_dining_courts">Dining Courts</string>
    <string name="nav_restaurants">Map</string>
    <string name="nav_cafes">News</string>
    <string name="nav_markets">Weather</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_layout">Layout</string>
    <string name="nav_email">Email</string>
    <string name="textbook">TextBook</string>
    <string name="network_error">Could not reach the network; please try again.</string>
    <string name="http_error">Could not reach Purdue HFS; please try again.</string>
    <string name="conversion_error">Encountered unexpected data; please try again.</string>
    <string name="unexpected_error">An unknown error occurred; please try again.</string>
    <string name="closed_error">Closed</string>
    <string name="no_app_error">No app available to handle that request.</string>
    <string name="retry">Retry</string>
    <string name="menu_map">Map</string>
    <string name="menu_call">Call</string>
    <string name="view_menu">View Menu</string>
    <string name="description">Description</string>
    <string name="veg">Vegetarian item</string>
    <string name="nonveg">Non-vegetarian item</string>
    <string name="ingredients">Ingredients</string>
    <string name="noinfo">No information available</string>
    <string name="allergens">Common Allergens</string>
    <string name="unknownAllergens">No common allergens</string>
    <string name="nutrition">Nutrition Facts</string>
    <string name="noFavoriteDiningCourt">You haven\'t yet chosen a favorite dining court. When you select your favorite dining court from the settings menu, you\'ll see its menu here.</string>
    <string name="nextMeal">Next meal</string>
    <string name="favoriteItems">Favorite items</string>
    <string name="noFavoriteItems">None of your favorite items are being served today. Why not choose a few more favorites? When any of your favorites are being served, they\'ll show up right here.</string>
    <string name="noMeal">Your favorite dining court is closed for today. Check back tomorrow.</string>
    <string name="menu_favorite">Favorite</string>
    <string name="favorite_add">%s added to favorites</string>
    <string name="favorite_remove">%s removed from favorites</string>

    <array name="favoriteDiningCourtPrefs">
        <item>None</item>
        <item>Earhart</item>
        <item>Ford</item>
        <item>Hillenbrand</item>
        <item>Wiley</item>
        <item>Windsor</item>
    </array>


    <string name="Calendar">Calendar</string>
    <string name="login">login</string>
    <string name="setting">setting</string>
    <string name="title_activity_login">Sign in</string>

    <string name="News">News</string>

    <string name="condition_icon">WeatherIconView</string>
    <string name="temperature">temperature</string>
    <string name="condition">condition</string>
    <string name="location">location</string>
    <string name="powered_by_yahoo">powered by Yahoo</string>
    <string name="update">update</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_maps">Map</string>
    <string name="umobile_header">uMobile Header</string>
    <string name="sign_in">Sign in</string>
    <string name="form_error">Please enter a username and password.</string>
    <string name="error_title">Error</string>
    <string name="title_activity_maps_activity_two">Map</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="notify_priority">notify_priority</string>
    <string name="weather">weather</string>

    <string name="logout_log">Are you sure you want to log off?</string>
    <string name="layout_title">message</string>
    <string name="defaultlanguage">English</string>

    <string-array name="language">
        <item>English</item>
        <item>汉语</item>
    </string-array>

    <string-array name="addCalendarEventArray">
        <item>Add Event</item>
        <item>Add Class</item>
    </string-array>

    <string-array name="selectBook">
        <item>
Choose books that have been added</item>
        <item>
Manual input</item>
    </string-array>

    <string-array name="class_type">
        <item>LEC--Lecture</item>
        <item>REC--Recitation</item>
        <item>PRS--Presentation</item>
        <item>LAB--Laboratory</item>
        <item>LBP--LabPrep</item>
        <item>CLN--Clinic</item>
        <item>SD--Studio</item>
    </string-array>

    <string-array name="weeks">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>


    <string name="language">language</string>
    <string name="music_dialog">Select Music</string>
    <string name="choose">choose</string>

    <string name="cache">Cache size is:</string>
    <string name="cache_sure">Are you sure you delete the cache?</string>

    <string name="addCalendarEvent">Select the type of event</string>
    <string name="AddDailyCalendarEvent">Add Daily CalendarEvent</string>
    <string name="event_title">title</string>
    <string name="notification_event">Do you want to remind you?</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="todo">Add event failed...</string>
    <string name="event_start_time">StratTime</string>
    <string name="event_End_Time">EndTime</string>
    <string name="addClssEvent">Add Class Event</string>
    <string name="class_title">ClassName</string>
    <string name="class_number">Class Number</string>
    <string name="class_meeting_at">Class Meeting at:</string>
    <string name="class_type">Class Type</string>
    <string name="class_year_senecter">year/senecter:  2016 spring</string>
    <string name="no_edit">You have not entered the complete</string>
    <string name="save_sucess">Add Event Success</string>
    <string name="delect">remove</string>
    <string name="ReadyHave">the time have a class</string>
    <string name="ready">This time you have lesson</string>
    <string name="email">email</string>
    <string name="comeingMessage">there is a alarm comeing</string>
    <string name="sousuo">search the book</string>
    <string name="book_title">select book</string>
    <string name="alert_booksname">You have not added courses</string>
    <string name="seacher">search</string>

    <string name="edit_bookA">Writing Book Name</string>


    <!-- Main Menu Button Labels -->
    <string name="main_menu_label_map">Campus Map</string>
    <string name="main_menu_label_bus">CityBus</string>
    <string name="main_menu_label_weather">Weather</string>
    <string name="main_menu_label_email">Email</string>
    <string name="main_menu_label_corec">Co-Rec Center</string>
    <string name="main_menu_label_dining">Dining Courts</string>
    <string name="main_menu_label_events">Events Directory</string>
    <string name="main_menu_label_sports">Sports</string>

    <!-- Dining Courts -->
    <string name="dining_court_earhart">Earhart</string>
    <string name="dining_court_ford">Ford</string>
    <string name="dining_court_hillenbrand">Hillenbrand</string>
    <string name="dining_court_windsor">Windsor</string>
    <string name="dining_court_wiley">Wiley</string>


    <!-- Unorganized -->
    <string name="prev_button">Prev</string>
    <string name="next_button">Next</string>
    <string name="time_place_tf">Time/place:</string>
    <string name="date_tf">Date:</string>
    <string name="tickets_tf">Tickets:</string>
    <string name="additional_tf">Additional Info:</string>
    <string name="hourly_button">Hourly</string>
    <string name="weekly_button">Weekly</string>
    <string name="radar_button">Radar</string>
    <string name="forecast_text_view">Forecast:</string>
    <string name="action_search">Search</string>
    <string name="Earhart">Earhart</string>
    <string name="Ford">Ford</string>
    <string name="Hillenbrand">Hillenbrand</string>
    <string name="Windsor">Windsor</string>
    <string name="Wiley">Wiley</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hourly_forecast_title">Hourly Forecast</string>
    <string name="weekly_forecast_title">Weekly Forecast</string>
    <string name="weather_title">Current Weather</string>
    <string name="test_weather_button">API Test</string>
    <string name="title_activity_dining_courts">Dining Courts</string>
    <string name="linetime">Line Time</string>
    <string name="seating">Seating and Availability</string>
    <string name="foodrating">Food Rating</string>
    <string name="info">Menus and Info</string>
    <string name="submit">Submit</string>
    <string name="main_menu">Main Menu</string>
    <string name="title_activity_sports">SportsActivity</string>
    <string name="title_activity_dining_court_menu_parser">DiningCourtMenuParserActivity</string>

</resources>
