<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather"

    android:orientation="vertical">


    <include layout="@layout/include_appbar" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/weatherIconImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/condition_icon"
                    android:src="@drawable/na" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/weatherIconImageView"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/temperatureTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#fff"
                            android:textSize="34sp"
                            android:textStyle="bold"
                            android:typeface="serif"
                            tools:text="@string/temperature" />

                        <Switch
                            android:id="@+id/unitSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="16dp"
                            android:checked="false"
                            android:text="C/F"
                            android:textColor="#fff" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/locationTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:cursorVisible="false"
                        android:layout_gravity="center"
                        android:textColor="#fff"
                        android:textSize="34sp"
                        tools:text="@string/location" />

                    <TextView
                        android:id="@+id/conditionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:gravity="center_horizontal"
                        android:textColor="#fff"
                        android:textSize="24sp"
                        tools:text="@string/condition" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/yahoo_logo"
                    android:layout_centerHorizontal="true">

                    <EditText
                        android:id="@+id/newCitypEditText"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:hint="New City"
                        android:textColorHint="@color/window_background" />

                    <Button
                        android:id="@+id/updateButton"
                        android:layout_width="wrap_content"
                        android:layout_height="38dp"
                        android:layout_above="@+id/yahoo_logo"
                        android:layout_marginLeft="6dp"
                        android:layout_toEndOf="@+id/newCitypEditText"
                        android:layout_toRightOf="@+id/newCitypEditText"
                        android:background="@drawable/custom_button"
                        android:text="@string/update"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/yahoo_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/powered_by_yahoo"
                    android:src="@drawable/yahoo_logo" />

                <ProgressBar
                    android:id="@+id/loading_progress"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="6dp"
                    android:visibility="visible" />

            </RelativeLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>
